--- a/LAB-01/style.css
+++ b/LAB-01/style.css
@@ -54,10 +54,10 @@ input:focus{
 }
 
 label{
-    margin-bottom : 100px;
+    margin-bottom : 10px;
 }
 
 span{
-    display: inline-block;
+    display: block;
     margin: 8px;
 }
