--- a/LAB-01/style.css
+++ b/LAB-01/style.css
@@ -30,6 +30,7 @@ form{
 input,
 button{
     border: none;
+    background: rgba(235, 240, 234, 0.5);
     border-radius: 18px;
     font-size: 24px;
     padding: 12px 24px;
