Add styles for drumkit, Bind upper cases in script

--- a/LAB-03/style.css
+++ b/LAB-03/style.css
@@ -4,6 +4,70 @@
     padding: 0;
 }
 
+body{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: rgb(65, 59, 59);
+}
+
+.container{
+    height: 700px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 audio{
    visibility: hidden;
+   width: 0px;
+   height: 0px;
+}
+
+.drumkit{
+    width: 400px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.drumkit h1{
+    color: white;
+    font-size: 40px;
+    font-variant-caps: small-caps;
+    padding: 20px;
+}
+
+.chanel1, 
+.chanel2, 
+.chanel3, 
+.chanel4{
+    width: 350px;
+    height: 50px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    margin: 20px 0 20px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+.icons, h2{
+    margin: 20px;
+}
+
+.play__button, .record__button{
+    width: 24px;
+    height: 24px;
+    margin: 5px;
+}
+
+.play__button:hover, .record__button:hover{
+    width: 28px;
+    height: 28px;
+    margin: 3px;
+}
+
+
+h2{
+    font-size: 16px;
 }
