--- a/LAB-03/style.css
+++ b/LAB-03/style.css
@@ -55,15 +55,17 @@ audio{
     margin: 20px;
 }
 
-#play1, #play2, #play3, #play4,
-#record1, #record2, #record3, #record4{
+.play,
+.stop,
+.record{
     width: 24px;
     height: 24px;
     margin: 5px;
 }
 
-#play1:hover, #play2:hover, #play3:hover, #play4:hover,
-#record1:hover, #record2:hover, #record3:hover, #record4:hover{
+.play:hover,
+.stop:hover, 
+.record:hover{
     width: 28px;
     height: 28px;
     margin: 3px;
