--- a/LAB-02/style.css
+++ b/LAB-02/style.css
@@ -1,52 +1,72 @@
+*,
+*::after,
+*::before{
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
 body{
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  font-family: Helvetica, sans-serif;
+  font-size: 24px;
 }
 
-#slider{
-    width: 600px;
-    height: 400px;
-    margin: 100px auto 0 auto;
-    overflow: hidden;
+.container{
+  height: 100vh;
+  width: 100vw;
+  background-color: rgb(159, 223, 159);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-#slider .slides{
-    display: flex;
-    animation-name: turn-left;
-    animation-duration: 10s;
-    animation-delay: 3s;
-    animation-timing-function: ease-in-out;
+.slider{
+  width: 600px;
+  height: 400px;
+  margin: 40px;
 }
 
-#next{
-    display: flex;
-    width: 200px;
-    height: 30px;
-    margin: 20px auto;
-    justify-content: center;
-    align-items: center;
+.slides{
+  display: flex;
+  border-radius: 10px;
+  justify-content: baseline;
+  flex-direction: row;
+  overflow: hidden;
 }
 
-#next .dot{
-    display: flex;
-    width: 15px;
-    height: 15px;
-    background-color: rgb(121, 119, 119);
-    margin-left: 10px;
-    border-radius: 50%;
-
+.dots {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  overflow: visible;
 }
 
-#next .dot:hover{
-    background-color: rgb(49, 49, 49);
+.dot {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: rgb(116, 98, 194);
+  margin: 0 5px;
+  cursor: pointer;
 }
 
-@keyframes turn-left {
-    0% {
-        transform: translateX(0);
-    }
+.dot.active {
+  background-color: rgb(68, 37, 207);
+}
 
-    100% {
-        transform: translate(-2000px);
-    }
+button{
+  background-color: rgb(68, 37, 207);
+  border: none;
+  border-radius: 5px;
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  font-size: 16px;
+  text-transform: uppercase;
+  width: 80px;
+  height: 40px;
+}
+
+button:hover{
+  background-color: rgb(116, 98, 194);
 }
