add delete, and edit notes methods

--- a/LAB-04/style.css
+++ b/LAB-04/style.css
@@ -12,39 +12,60 @@ body{
 .form{
     display: flex;
     justify-content: center;
+    align-items: center;
     margin: 32px;
 }
 
-#add-form{
+#add-form, #edit-form{
     display: flex;
+    align-items: center;
+    justify-content: baseline;
     flex-direction: column;
+    max-width: 400px;
+    padding: 36px 24px;
 }
 
-input, textarea, select{
+label, textarea, input, select{
     margin-bottom: 16px;
+    padding: 12px 12px;
 }
 
-label{
-    display: inline-block;
+#add{
+    text-align: center;
+    width: 100px;
 }
 
 .notes{
     display: flex;
-    align-items: center;
+    margin: 64px;
     justify-content: center;
     flex-wrap: wrap;
-}    
-
-.note{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 300px;
-    min-height: 100px;
-    margin: 10px;
+    align-items: flex-start;
 }
 
-.addedNote button{
-    width: 100px;
-    justify-content: space-between;
+.note{
+    margin: 16px;
+}
+
+.note > p, h3{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    flex-direction: column;
+    width: 400px;
+    margin: 16px;
+}
+
+.note > h3{
+    margin: 12px;
+    color: #000000;
+}
+
+.note > p, button{
+    margin-bottom: 16px;
+}
+
+.note > button{
+    padding: 2px;
+    margin: 5px;
 }
