--- a/LAB-04/style.css
+++ b/LAB-04/style.css
@@ -9,11 +9,39 @@ body{
     font-family: Helvetica, sans-serif;
 }
 
+.container{
+    justify-content: center;
+    align-content: center;
+    width: 100%;
+}
+
+header{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+    margin-top: 30px;
+    font-size: 42px;
+    color: #000;
+}
+
+button{
+    background-color: #444343;
+    border: none;
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+button:hover{
+    background-color: #6e6d6d;
+}
+
 .form{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 32px;
+    margin: 16px;
 }
 
 #add-form, #edit-form{
