--- a/LAB-07/style.css
+++ b/LAB-07/style.css
@@ -7,7 +7,6 @@
 body{
     display: flex;
     justify-content: center;
-    margin-top: 50px;
     font-family: Helvetica, sans-serif;
 }
 
@@ -15,16 +14,17 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 1000px;
-    height: 600px;
-    background-color: aqua;
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(218, 218, 218);
 }
 
 header{
-    background-color: antiquewhite;
+    background-color: #04AA6D;
     width: 100%;
     padding: 10px;
     text-align: center;
+    color: #fff;
 }
 
 #search{
@@ -35,7 +35,6 @@ header{
 input{
     width: 300px;
     border: none;
-    background-color: rgb(182, 180, 180, 0.6);
 }
 
 input:focus{
@@ -46,6 +45,7 @@ button{
     color: #fff;
     border: none;
     background-color: #04AA6D;
+    cursor: pointer;
 }
 
 button:hover{
@@ -55,4 +55,62 @@ button:hover{
 input, button{
     padding: 10px;
     border-radius: 10px;
+}
+
+.weather-content{
+    font-family: 'Roboto', sans-serif;
+    width: 80%;
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.wetaher-content-child{
+    background-color: #04AA6D;;
+    color: #fff;
+    margin: 20px;
+    padding: 15px;
+    width: 200px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+    border-radius: 20px;
+}
+
+.weather{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.weatherIcon{
+    display: flex;
+}
+
+.temperature{
+    font-size: 24px;
+}
+
+.humidity{
+    font-size: 10px;
+}
+
+.delete {
+    position: absolute;
+    margin-right: 150px;
+    visibility: hidden;    
+}
+
+.wetaher-content-child:hover > .delete{
+    visibility: visible;
+    cursor: pointer;
+}
+
+.delete > img{
+    width: 20px;
+    height: 20px;
 }
